// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog creates a comment 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog creates a new comment when new commits change the spec 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog creates a new comment when new commits change the spec 2`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"root\\",
                    \\"path\\": \\"\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"updated\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_to6GIY7tL3\\",
                    \\"path\\": \\"/healthcheck\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_td6dXtR2C5\\",
                    \\"path\\": \\"/api/specs/{specId}\\",
                    \\"method\\": \\"GET\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (6)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**GET**  | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/root/methods/GET) |,**GET** /healthcheck | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_to6GIY7tL3/methods/GET) |,**GET** /api/account/tokens | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_Zbx2qte52s/methods/GET) |,**POST** /api/account/tokens | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_Zbx2qte52s/methods/POST) |,**POST** /api/account/specs | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_jleYfnE1Ru/methods/POST) |,**GET** /api/specs/{specId} | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_td6dXtR2C5/methods/GET) |
###### 📝 updated Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**GET** /api/account/specs | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_jleYfnE1Ru/methods/GET) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"5c322aae54fd7fe1bf8f03a7bf51ff4f59be8cce\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 2`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": []
        }
    }
}",
  ],
]
`;

exports[`Changelog fails silently when there isn't a spec in the head branch 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Could not find the Optic spec in the current branch. Looking in .optic/api/specification.yml.",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Changelog works correctly when there isn't a spec in the base branch 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"GET\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://user-images.githubusercontent.com/4368270/116313128-5bece580-a77b-11eb-9356-cee1ee1ee367.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/documentation)

##### Changelog for Name \`/.optic/api/specification.yml
###### 🟢 added Endpoints (2)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/documentation/paths/path_VyuFAjdBCO/methods/POST) |,**GET** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/documentation/paths/path_VyuFAjdBCO/methods/GET) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"f90049012c0b30e8291f52e2298f90bc31c1e232\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;
